@@ -2,8 +2,52 @@
 # Configurable variable values for building test suites.
 # Copyright (C) 2000 Free Software Foundation, Inc.
 
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
+# 02111-1307, USA.
+
+# This script is part of Autotest.  Unlimited permission to copy,
+# distribute and modify the testing scripts that are the output of
+# that Autotest script is given.  You need not follow the terms of the
+# GNU General Public License when using or distributing such scripts,
+# even though portions of the text of Autotest appear in them.  The
+# GNU General Public License (GPL) does govern all other use of the
+# material that constitutes the Autotest.
+#
+# Certain portions of the Autotest source text are designed to be
+# copied (in certain cases, depending on the input) into the output of
+# Autotest.  We call these the "data" portions.  The rest of the
+# Autotest source text consists of comments plus executable code that
+# decides which of the data portions to output in any given case.  We
+# call these comments and executable code the "non-data" portions.
+# Autotest never copies any of the non-data portions into its output.
+#
+# This special exception to the GPL applies to versions of Autotest
+# released by the Free Software Foundation.  When you make and
+# distribute a modified version of Autotest, you may extend this
+# special exception to the GPL to apply to your modified version as
+# well, *unless* your modified version has the potential to copy into
+# its output some of the text that was the non-data portion of the
+# version that you started with.  (In other words, unless your change
+# moves or copies text from the non-data portions to the data
+# portions.)  If your modification has such potential, you must delete
+# any notice of this special exception to the GPL from your modified
+# version.
+
 # Snippet (1
 # This debugging script has been automatically generated from `make check'.
+# Call it with `--help' to get a quick usage summary.
 
 at_package=@PACKAGE@
 at_version=@VERSION@
