@@ -1,5 +1,17 @@
 2000-02-07  Akim Demaille  <akim@epita.fr>
 
+	* acspecific.m4 (AC_C_CONST): Don't changequote, there is no need
+	for it.  Just quote properly!
+	condition out the test case if __cpluscplus.
+	AC_REQUIRE AC_PROG_CC_STDC.
+	Fix slightly the display of the result (formerly the first run
+	says `none needed', and later, because of the cache `no').
+	(AC_C_INLINE, AC_C_VOLATILE): AC_REQUIRE AC_PROG_CC_STDC.
+	* doc/autoconf.texi (AC_C_CONST): Give a few hints on the
+	motivation for trusting the C++ compilers.
+
+2000-02-07  Akim Demaille  <akim@epita.fr>
+
 	* tests/atgeneral.m4: Updated.
 	(AT_CASE): new macro.
 	(AT_CHECK): Use it.  Don't changequote for patsubst, there is no
